Fixed anchor link headers being hidden by page header

--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -34,6 +34,13 @@ ul {
   -webkit-padding-start: 15px;
 }
 
+:target:before {
+  content: "";
+  display: block;
+  height: 80px;      // fixed header height
+  margin: -80px 0 0; // negative fixed header height
+}
+
 .videoWrapper {
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */
